--- a/Ej_JavaScript/IndexJs.9 .html
+++ b/Ej_JavaScript/IndexJs.9 .html
@@ -109,25 +109,21 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script>
-      /*       Establecemos una alerta */
-
-      // alert("Bienvenidos alumnos al curso");
       var i;
       var nombre = ["Diego", "Juan", "Roberto"];
       // Recorro el arreglo y le paso a la funcion cada valor del arreglo
       for (let index = 0; index < nombre.length; index++) {
-        alert("Hola" + nombre[index] + "!");
+        swal("Hola" + nombre[index] + "!");
       }
 
       // Establecemos estilos
       document.getElementById("parrafo1").style.color = "red";
       // document.getElementById("parrafo2").style.color = "blue";
-      // Establecemos una funcion para una alerta
+      // Establecemos una funcion para una swala
       function saludarme() {
-        alert("Bienvenido");
+        swal("Bienvenido");
       }
       // Establecemos una funcion para cambiar estilo
       function cambiarEstilo() {
@@ -164,19 +160,19 @@
 
         if (txtNombre.value === "") {
           // para comparar string con string ===
-          alert("Ingrese un nombre");
+          swal("Ingrese un nombre");
         }
         if (txtApellido.value === "") {
-          alert("INgrese Apellido");
+          swal("INgrese Apellido");
         }
         if (txtDescripcion.value === "") {
-          alert("INgrese Descripcion");
+          swal("INgrese Descripcion");
         } else if (txtDescripcion.value.length > 100) {
-          alert("Excedió el limite de caracteres");
+          swal("Excedió el limite de caracteres");
         }
 
         if (isNaN(txtEdad.value)) {
-          alert("Ingrese un numero por favor");
+          swal("Ingrese un numero por favor");
           return false;
         }
 
@@ -192,7 +188,7 @@
           }
 
           if (algunoCheheado == false) {
-            alert("Selecciones algún sexo");
+            swal("Selecciones algún sexo");
           }
         }
 
@@ -201,9 +197,9 @@
 
       function guardarDatos() {
         if (validarForm() == true) {
-          alert("Guardando datos!!!");
+          swal("Guardando datos!!!");
         } else {
-          alert("Error de validación");
+          swal("Error de validación");
         }
       }
 
@@ -219,7 +215,7 @@
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></scr>
     -->
   </body>
 </html>
